# anki-incontext

./: .copier-answers.yml  .gitignore  .gitmodules  .pylintrc  CHANGELOG.md  Makefile  README.md  addon.json  ankiweb_page.html  justfile  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  tatoeba.sh  vendor.sh
.vscode.dist/: launch.json  settings.json
designer/: dialog.ui  fill.ui  form.ui
docs/: book.toml
docs/src/: SUMMARY.md  browse.md  fill.md  intro.md  review.md  settings.md  support.md
proto/: backend.proto
scripts/: vendor_hooks.py
src/: __init__.py  browser.py  config.json  config.schema.json  consts.py  db.py  errors.py  exceptions.py  form_qt5.py  form_qt6.py  incontext_dialog.py  keys.py  main.py  manifest.json  menu.py  request.py  sentences.py  session.py  shortcuts.py  template_filter.py  updates.py
src/backend/: services.py
src/gui/: browse.py  fill.py  languages.py  main.py  operations.py  settings.py  sveltekit_web.py  tatoeba.py
src/providers/: __init__.py  dictionary_com.py  en.py  glosbe.py  jisho.py  langs.py  lexico.py  massif.py  nadeshiko.py  oxford_learner.py  provider.py  seslisozluk.py  skell.py  tatoeba.py  tdk.py  tr.py
src/user_files/: README.txt
src/user_files/tatoeba/: README.txt
src/web/: incontext.css  incontext.js
tests/: test_db.py
ts/: package-lock.json  package.json
ts/src/lib/: BaseSelect.svelte  Dropdown.svelte  Error.svelte  KeyboardInput.svelte  LanguageSelect.svelte  ModalSelector.svelte  MultiSelect.svelte  Select.svelte  SelectControl.svelte  SelectOptions.svelte  Spinner.svelte  backend.ts  clipboard-monitor.ts  global.ts  index.ts
ts/src/lib/css/: base.css
ts/src/routes/browse/: +page.svelte  +page.ts  ProviderError.svelte  SearchField.svelte  SearchLanguageSelector.svelte  SearchProviderDropdown.svelte  SentenceCard.svelte
ts/src/routes/fill/: +page.svelte  +page.ts
ts/src/routes/help/: +page.svelte
ts/src/routes/languages/: +page.svelte
ts/src/routes/settings/: +page.svelte  Nadeshiko.svelte  SearchShortcut.svelte  types.ts
ts/src/routes/tatoeba/: +page.svelte
